# django_basic

./: Makefile  README.md  history.md  local_template.env  pyproject.toml
basic/accounts/migrations/: 0001_initial.py
basic/basic/: asgi.py  settings.py  settings_common.py  settings_dev.py  urls.py  wsgi.py
basic/sample_app/: forms.py  models.py  urls.py  views.py
basic/sample_app/templates/: base.html  diary_create.html  diary_delete.html  diary_detail.html  diary_list.html  diary_update.html  index.html  inquiry.html
