[tool.poetry]
name = "django-basic"
version = "0.1.0"
description = ""
authors = ["haribote-prog"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2-binary = "^2.9.10"
django-allauth = "^65.2.0"
pillow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.0"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
